@@ -1,3 +1,9 @@
+Sun May 19 04:26:58 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * debian/rules: Remove all calls to $(shell pwd), and use $(CURDIR).
+    Also, `pwd` is removed.  There was a var, DIR := $(shell pwd);
+    instances of this var were also replaced with CURDIR.
+
 Sun May 19 04:18:46 CDT 2002 Adam Heath <doogie@debian.org>
 
   * debian/rules: If automake/*.m4 is modified, rebuild aclocal.m4.  If
